added links to channels across the different pages
videos and comments now enable you to click on a channel to open the according channel page

--- a/watch/style.css
+++ b/watch/style.css
@@ -223,7 +223,7 @@ hr {
     gap: 1em;
 }
 
-.channel-info > img {
+.channel-info > a > img {
     width: 3em;
     height: 3em;
     border-radius: 50%;
@@ -272,7 +272,7 @@ hr {
     height: 100%;
 }
 
-.comment > img {
+.comment > a > img {
     width: 2.5em;
     height: 2.5em;
     border-radius: 50%;
