added link to editor from subs page
added a gear icon to get from the sub-page to the editor. also made some small improvements.

--- a/subbox-editor/style.css
+++ b/subbox-editor/style.css
@@ -358,6 +358,7 @@ code > a {
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
+    max-width: 14em;
 }
 
 .channel-list-divider-top {
