--- a/subs.css
+++ b/subs.css
@@ -52,6 +52,15 @@ header {
     width: 100%;
     height: 100%;
 }
+
+.header-container > .header-right {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 5em;
+    height: 5em;
+}
+
 .header-container > .header-left > div {
     display: flex;
     height: 100%;
@@ -67,11 +76,11 @@ header {
     position: relative;
 }
 
-.main-logo-link {
+.main-logo-link, .edit-link {
     text-decoration: none;
     height: 100%;
 }
-.main-logo-link > div {
+.main-logo-link > div , .edit-link > div {
     height: 3em;
     margin-top: .5em;
     display: flex;
@@ -80,6 +89,11 @@ header {
 .main-logo-image {
     max-height: 100%;
     margin-left: 1.5em;
+}
+
+.edit-image {
+    max-height: 100%;
+    margin-right: 1.5em;
 }
 
 .search-bar {
@@ -258,6 +272,32 @@ progress::-webkit-progress-bar {
 progress::-webkit-progress-value {
 	background: var(--accent);
 	transition: width .5s ease-out;
+}
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    font-family: Arial;
+    width: 4em;
+    background-color: var(--comments);
+    color: var(--white);
+    text-align: center;
+    border-radius: .25em;
+    padding: .25em .1em;
+    
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+    left: 50%;
+    margin-left: -3em;
+}
+  
+.tooltip:hover .tooltiptext {
+    visibility: visible;
 }
 
 
