--- a/subs.css
+++ b/subs.css
@@ -80,6 +80,7 @@ header {
     text-decoration: none;
     height: 100%;
 }
+
 .main-logo-link > div , .edit-link > div {
     height: 3em;
     margin-top: .5em;
@@ -300,6 +301,13 @@ progress::-webkit-progress-value {
     visibility: visible;
 }
 
+.search-video-left-container {
+    padding-right: .5em;
+}
+.header-right {
+    max-width: 4em;
+}
+
 
 @media only screen and (max-width: 60em) {
     .search-main-content {
@@ -340,7 +348,9 @@ progress::-webkit-progress-value {
     .search-video-avatar {
         margin-right: .5em;
     }
-    .search-video-left-container {
-        padding-right: .5em;
+    
+
+    .header-right {
+        max-width: 3.5em;
     }
 }
